Mein CV aktualisiert

--- a/index.html
+++ b/index.html
@@ -4,32 +4,80 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
-<body class="bg-light p-1 pt-4 pb-4">
-<div class="card shadow-sm">
-    <div class="row g-0 align-items-center ps-1 shadow">
-      <div class="col-auto">
-        <img src="https://randomuser.me/api/portraits/women/44.jpg" class="img-fluid rounded" alt="Maria Grünfelder">
-      </div>
-      <div class="col">
-        <div class="card-body">
-          <h5 class="card-title mb-2">Maria Grünfelder</h5>
-          <address class="mb-0 text-secondary">
-            <div>
-                <i class="bi bi-envelope pe-1"></i>
-                maria.gruenfelder@email.com
-            </div>
-            <div>
-                <i class="bi bi-geo pe-1"></i>
-                Biel, Schweiz
-            </div>
-            <div>
-                <i class="bi bi-telephone pe-1"></i>
-                +41 32 123 4567
-            </div>
-          </address>
-        </div>
-      </div>
+<body>
+<div class="row align-items-center">
+    <div class="col-sm-4">
+        <img src="./images/photo.jpg" class="rounded img-fluid">
     </div>
-  </div>
-</body>
+    <div class="col-sm-8">
+        <h1>Yelyzaveta Spivak</h1>
+        <p>Schülerin</h4>
+        <div class="row">
+            <div class="col-lg-4">
+                <i class="bi-telephone-fill"></i>
+                076 592 63 39
+            </div>
+            <div class="col-lg-4">
+                <i class="bi bi-envelope-at-fill"></i>
+                Yelyzaveta.Spivak@edu.gbsl.ch
+            </div>
+            <div class="col-lg-4">
+                <i class="bi bi-globe2"></i>
+                <a href="https://h0fer.netlify.app">h0fer.netlify.app</a>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row my-4">
+    <div class="col-sm-4">
+        <h4>Übersicht</h4>
+    </div>
+    <div class="col-sm-8">
+        Ich besuche das Gymnasium Biel-Seeland, WMS, mit den Schwerpunktfächern FRW und WR.
+        In meiner Freizeit halte ich mich gerne in der Natur auf und spiele Badminton.
+    </div>
+</div>
+<div class="row mt-4">
+    <div class="col-sm-4">
+        <h4>Ausbildung</h4>
+    </div>
+    <div class="col-sm-3">
+        <span class="badge text-bg-warning">2024 - Heute</span>
+    </div>
+    <div class="col-sm-5">
+        <h6>Gymnasium Biel-Seeland</h6>
+        <ul>
+            <li>Schwerpunktfach: FRW, WR</li>
+            <li>Ergänzungsfach: Informatik</li>
+            <li>Praxisfirma: SEDIA</li>
+        </ul>
+    </div>
+</div>
+<div class="row">
+    <div class="col-sm-4"></div>
+    <div class="col-sm-3">
+        <span class="badge text-bg-secondary">2022 - 2024</span>
+    </div>
+    <div class="col-sm-5">
+        <h6>Brückenangebot, Berufsbildungszentrum Biel</h6>
+    </div>
+</div>
+<div class="row">
+    <div class="col-sm-4"></div>
+    <div class="col-sm-3">
+        <span class="badge text-bg-secondary">2013 - 2022</span>
+    </div>
+    <div class="col-sm-5">
+        <h6>Schule mit dem Schwerpunktfach Mathematik, Ukraine</h6>
+    </div>
+</div>
+<div class="row mt-4">
+    <div class="col-sm-4">
+        <h4>Stärken</h4>
+    </div>
+    <div class="col-sm-8">
+        Ich zeichne mich durch eine präzise, strukturierte und sehr sorgfältige Arbeitsweise aus, sowohl bei individuellen Aufgaben als auch in Gruppenprojekten.
+        Als Perfektionistin lege ich grossen Wert auf Qualität und Genauigkeit.
+        In Teams bringe ich mich aktiv ein, kommuniziere klar und bringe dank meiner Sprachbegabung innovative Ideen sowie kreative Lösungsansätze für komplexe Problemstellungen ein.
+</div>
 </html>
